--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   height: 100%;
 }
 .contactBG{
-  background-image:url("./assets/Mapline_AWC_Map\ \(2\).png");
+  background-image:url("./assets/Mapline_AWC_Map\ \(2\).jpg");
   height:100%;
   background-size: cover;
 }
