--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,7 +90,7 @@ body > #root > div {
 }
 .card{
   margin-top: 1%!important;
-  width:80vw;
+  width:90vw;
   font-size: 2vh;
   margin:auto;
   background-color: #ffffffe5;
@@ -122,7 +122,7 @@ margin:auto;
 }
 
 #alert {
-  padding: 20px;
+  padding:1vh;
   background-color: #f44336;
   color: white;
 }
