--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,6 @@
-.topnav {
-  background-color: #ffffffe5;
-  overflow: hidden;
-  margin:auto;
-  height: fit-content;
-  width:fit-content;
-  max-width: 90vw;
-  font-family: 'Julius Sans One', sans-serif;
-  font-weight: bold;
-  border-radius: 6px;
-  justify-content: center;
-}
-
-.topnav a {
-  float: left;
-  color: black;;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #49494996;
-  color: white;
-}
 .homeBG{
   background-color: #5e5e5e27;
-  background-image: url("./assets/living-up.jpg");
+  background-image: url("./assets/ocean.webp");
   background-size: cover;
   height: 100vh;
   /* background-image: url("data:image/svg+xml,%3Csvg width='120' height='120' viewBox='0 0 120 120' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9 0h2v20H9V0zm25.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm-20 20l1.732 1-10 17.32-1.732-1 10-17.32zM58.16 4.134l1 1.732-17.32 10-1-1.732 17.32-10zm-40 40l1 1.732-17.32 10-1-1.732 17.32-10zM80 9v2H60V9h20zM20 69v2H0v-2h20zm79.32-55l-1 1.732-17.32-10L82 4l17.32 10zm-80 80l-1 1.732-17.32-10L2 84l17.32 10zm96.546-75.84l-1.732 1-10-17.32 1.732-1 10 17.32zm-100 100l-1.732 1-10-17.32 1.732-1 10 17.32zM38.16 24.134l1 1.732-17.32 10-1-1.732 17.32-10zM60 29v2H40v-2h20zm19.32 5l-1 1.732-17.32-10L62 24l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM111 40h-2V20h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zM40 49v2H20v-2h20zm19.32 5l-1 1.732-17.32-10L42 44l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM91 60h-2V40h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM39.32 74l-1 1.732-17.32-10L22 64l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM71 80h-2V60h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM120 89v2h-20v-2h20zm-84.134 9.16l-1.732 1-10-17.32 1.732-1 10 17.32zM51 100h-2V80h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM100 109v2H80v-2h20zm19.32 5l-1 1.732-17.32-10 1-1.732 17.32 10zM31 120h-2v-20h2v20z' fill='%23843bf7' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E"); */
@@ -56,9 +26,9 @@
   min-height: 100vh;
   background-size: cover;
 }
-body > #root > div {
+/* body > #root > div {
   height: 100vh;
-}
+} */
 
 @media only screen and (max-width: 700px) {
   .large{
@@ -77,26 +47,6 @@ body > #root > div {
 
 }
 
-.jumbotron{
-  width:fit-content;
-  margin-top: 20vh!important;
-  max-width: 90vw;
-  text-align: center;
-  margin:auto;
-  border-radius: 20px;
-  background-color: #ffffffe5;
-  font-family: 'Julius Sans One', sans-serif;
-  padding:1%;
-}
-.jheader{
-  font-size:7vh;
-  font-weight: bolder;
-}
-.jP{
-  font-size:4vh;
-  font-weight: bolder;
-  color:rgb(94, 94, 94);
-}
 .card{
   margin-top: 1%!important;
   width:90vw;
@@ -138,23 +88,6 @@ margin:auto;
   margin-bottom:7%;
 }
 
-#alert {
-  padding:1vh;
-  background-color: #f44336;
-  color: white;
-}
-
-.closebtn {
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.closebtn:hover {
-  color: black;
+body{
+  overflow-x:hidden;
 }
