--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,30 +1,28 @@
-.topnav {
-    background-color: #ffffffe5;
-    overflow: hidden;
-    margin:auto;
-    height: fit-content;
-    width:fit-content;
-    max-width: 90vw;
-    font-family: 'Julius Sans One', sans-serif;
-    font-weight: bold;
-    border-radius: 6px;
-    justify-content: center;
-  }
+#navigation{
+  position: fixed;
+  font-family: 'Playfair Display', serif!important;
+  width:100vw;
+}
+.title {
+  position: fixed;
+  color: white;
+  margin-left: 1%;
+  text-decoration: none;
+}
+.title:hover{
+  color:white;
+}
+
+.Burger{
+  margin-left: calc(100vw - 5rem - 12px);
   
-  .topnav a {
-    float: left;
-    color: black;;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #49494996;
-    color: white;
-  }
+}
+
+.MuiSvgIcon-root{
+  fill: #ffff!important;
+  font-size: 2.5rem!important;
+}
+
+#navigation{
+  z-index: 1;
+}
