--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -1,13 +1,16 @@
+#home{
+    height: 400vh;
+    width:100vw;
+    max-width: 100vw;
+    background-color: black;
+    
+}
 #landingvid{
     position:absolute;
-    object-fit: cover;
+    object-fit:cover;
     height:100vh;
     width:100vw;
-    z-index: -1;
-}
-h1{
-    position:fixed;
-    color:white;
-    font-family: 'Playfair Display', serif;
-    margin-left:1%;
-}
+    max-width: 100vw;
+    z-index: 0;
+    filter:brightness(.8)
+    }
