--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,28 +1,3 @@
-#navigation{
-  position: fixed;
-  font-family: 'Playfair Display', serif!important;
-  width:100vw;
-}
-.title {
-  position: fixed;
-  color: white;
-  margin-left: 1%;
-  text-decoration: none;
-}
-.title:hover{
-  color:white;
-}
-
-.Burger{
-  margin-left: calc(100vw - 5rem - 12px);
-  
-}
-
-.MuiSvgIcon-root{
-  fill: #ffff!important;
-  font-size: 2.5rem!important;
-}
-
-#navigation{
-  z-index: 1;
+a{
+  text-decoration: none!important;
 }
