--- a/src/styles/texstyle.css
+++ b/src/styles/texstyle.css
@@ -6,7 +6,7 @@
     margin:auto;
     position: absolute;
     color:white;
-    font-size: 10vh;
+    font-size: 7vw;
     font-family: 'Playfair Display', serif;
     text-align: center;
     top: 50%;
@@ -14,3 +14,7 @@
     transform: translate(-50%, -50%);
 }
 /* if a/r is less than 1:1 change font size to 10 vw  */
+
+.pdesc{
+    line-height: 3rem;
+}
