updated footer styling

--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -129,7 +129,6 @@ iframe{
     bottom:0;
     color:white;
     width:100vw;
-    margin-top:10vh;
     box-shadow:-10px;
     -webkit-box-shadow: 0px -2px 4px 1px rgba(50, 50, 50, 0.75);
     -moz-box-shadow: 0px -2px 4px 1px rgba(50, 50, 50, 0.75);
@@ -143,4 +142,9 @@ iframe{
     height:5vh!important; 
     margin-left:1vw;
     float:left;
+}
+.footersection{
+    background-color: white;
+    height: fit-content;
+    padding-top:5vh;
 }
