updated styling of boxes and dividers for smaller veiwing sizes

--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -158,3 +158,8 @@ iframe{
     padding-bottom:1vh;
 }
 
+@media only screen and (max-width: 850px) {
+    .col{
+        width:70vw!important;
+    }
+}
